code manette presque fini

--- a/UESTC_controller/UESTC_controller.ioc
+++ b/UESTC_controller/UESTC_controller.ioc
@@ -42,8 +42,9 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM3
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP6=TIM4
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
@@ -55,6 +56,7 @@ Mcu.Pin13=PB4
 Mcu.Pin14=PB5
 Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -63,21 +65,21 @@ Mcu.Pin6=PB1
 Mcu.Pin7=PB2
 Mcu.Pin8=PA9
 Mcu.Pin9=PA10
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
-NVIC.ADC1_2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.ADC1_2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI2_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI3_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI4_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI9_5_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -86,6 +88,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM4_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Locked=true
@@ -106,6 +109,8 @@ PA4.Signal=ADCx_IN4
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB1.GPIOParameters=GPIO_ModeDefaultEXTI
+PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB1.Locked=true
 PB1.Signal=GPXTI1
 PB2.GPIOParameters=GPIO_ModeDefaultEXTI
@@ -120,6 +125,8 @@ PB4.GPIOParameters=GPIO_ModeDefaultEXTI
 PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB4.Locked=true
 PB4.Signal=GPXTI4
+PB5.GPIOParameters=GPIO_ModeDefaultEXTI
+PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB5.Locked=true
 PB5.Signal=GPXTI5
 PD0-OSC_IN.Locked=true
@@ -160,7 +167,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
@@ -194,11 +201,18 @@ TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM3.Period=1000-1
 TIM3.Prescaler=800-1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,AutoReloadPreload
+TIM4.Period=1000-1
+TIM4.Prescaler=800-1
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 isbadioc=false
